--- a/1/1.1/Start.ipynb
+++ b/1/1.1/Start.ipynb
@@ -1,33 +1,65 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "id": "53ff4164",
-   "metadata": {},
-   "source": [
-    "# Start"
-   ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "id": "53ff4164",
+      "metadata": {
+        "id": "53ff4164"
+      },
+      "source": [
+        "# Start"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 1.1 Importing Basic Lib"
+      ],
+      "metadata": {
+        "id": "rMRKQL7_BCVu"
+      },
+      "id": "rMRKQL7_BCVu"
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "from tqdm import tqdm # To see progess of training\n",
+        "from scipy.special import logsumexp\n",
+        "from keras.datasets.mnist import load_data"
+      ],
+      "metadata": {
+        "id": "AptFVdu597F0"
+      },
+      "id": "AptFVdu597F0",
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ABLjiVV87p96"
+      },
+      "id": "ABLjiVV87p96",
+      "execution_count": 8,
+      "outputs": []
+    }
+  ],
+  "metadata": {
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.9.6"
+    },
+    "colab": {
+      "provenance": []
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "508bdf18",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "name": "python",
-   "version": "3.9.6"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
+  "nbformat": 4,
+  "nbformat_minor": 5
 }
