--- a/1/1.1/Start.ipynb
+++ b/1/1.1/Start.ipynb
@@ -23,10 +23,63 @@
     {
       "cell_type": "code",
       "source": [
+        "!pip uninstall protobuf -y\n",
+        "!pip install protobuf==3.20.3"
+      ],
+      "metadata": {
+        "id": "fQELMFJ5cp1w",
+        "outputId": "e41f5d91-4200-47f1-dc3e-ced70a8eb091",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 357
+        }
+      },
+      "id": "fQELMFJ5cp1w",
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Found existing installation: protobuf 5.29.5\n",
+            "Uninstalling protobuf-5.29.5:\n",
+            "  Successfully uninstalled protobuf-5.29.5\n",
+            "Collecting protobuf==3.20.3\n",
+            "  Downloading protobuf-3.20.3-py2.py3-none-any.whl.metadata (720 bytes)\n",
+            "Downloading protobuf-3.20.3-py2.py3-none-any.whl (162 kB)\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m162.1/162.1 kB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: protobuf\n",
+            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
+            "opentelemetry-proto 1.37.0 requires protobuf<7.0,>=5.0, but you have protobuf 3.20.3 which is incompatible.\n",
+            "ydf 0.13.0 requires protobuf<7.0.0,>=5.29.1, but you have protobuf 3.20.3 which is incompatible.\n",
+            "grpcio-status 1.71.2 requires protobuf<6.0dev,>=5.26.1, but you have protobuf 3.20.3 which is incompatible.\n",
+            "tensorflow-metadata 1.17.2 requires protobuf>=4.25.2; python_version >= \"3.11\", but you have protobuf 3.20.3 which is incompatible.\u001b[0m\u001b[31m\n",
+            "\u001b[0mSuccessfully installed protobuf-3.20.3\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "application/vnd.colab-display-data+json": {
+              "pip_warning": {
+                "packages": [
+                  "google"
+                ]
+              },
+              "id": "d439bb0c60d548debcf401eadfadb6f6"
+            }
+          },
+          "metadata": {}
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import numpy as np\n",
         "from tqdm import tqdm # To see progess of training\n",
         "from scipy.special import logsumexp\n",
-        "from keras.datasets.mnist import load_data"
+        "# from keras.datasets.mnist import load_data"
       ],
       "metadata": {
         "id": "AptFVdu597F0"
