Kaggle Notebook | notebook3afe0d26a5 | Version 2

--- a/1/1.1/Start.ipynb
+++ b/1/1.1/Start.ipynb
@@ -1,118 +1,499 @@
 {
-  "cells": [
-    {
-      "cell_type": "markdown",
-      "id": "53ff4164",
-      "metadata": {
-        "id": "53ff4164"
-      },
-      "source": [
-        "# Start"
-      ]
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "082e6425",
+   "metadata": {
+    "id": "53ff4164",
+    "papermill": {
+     "duration": 0.004074,
+     "end_time": "2026-01-06T10:36:34.361392",
+     "exception": false,
+     "start_time": "2026-01-06T10:36:34.357318",
+     "status": "completed"
     },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "### 1.1 Importing Basic Lib"
-      ],
-      "metadata": {
-        "id": "rMRKQL7_BCVu"
-      },
-      "id": "rMRKQL7_BCVu"
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!pip uninstall protobuf -y\n",
-        "!pip install protobuf==3.20.3"
-      ],
-      "metadata": {
-        "id": "fQELMFJ5cp1w",
-        "outputId": "e41f5d91-4200-47f1-dc3e-ced70a8eb091",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 357
-        }
-      },
-      "id": "fQELMFJ5cp1w",
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Found existing installation: protobuf 5.29.5\n",
-            "Uninstalling protobuf-5.29.5:\n",
-            "  Successfully uninstalled protobuf-5.29.5\n",
-            "Collecting protobuf==3.20.3\n",
-            "  Downloading protobuf-3.20.3-py2.py3-none-any.whl.metadata (720 bytes)\n",
-            "Downloading protobuf-3.20.3-py2.py3-none-any.whl (162 kB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m162.1/162.1 kB\u001b[0m \u001b[31m5.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: protobuf\n",
-            "\u001b[31mERROR: pip's dependency resolver does not currently take into account all the packages that are installed. This behaviour is the source of the following dependency conflicts.\n",
-            "opentelemetry-proto 1.37.0 requires protobuf<7.0,>=5.0, but you have protobuf 3.20.3 which is incompatible.\n",
-            "ydf 0.13.0 requires protobuf<7.0.0,>=5.29.1, but you have protobuf 3.20.3 which is incompatible.\n",
-            "grpcio-status 1.71.2 requires protobuf<6.0dev,>=5.26.1, but you have protobuf 3.20.3 which is incompatible.\n",
-            "tensorflow-metadata 1.17.2 requires protobuf>=4.25.2; python_version >= \"3.11\", but you have protobuf 3.20.3 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0mSuccessfully installed protobuf-3.20.3\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/vnd.colab-display-data+json": {
-              "pip_warning": {
-                "packages": [
-                  "google"
-                ]
-              },
-              "id": "d439bb0c60d548debcf401eadfadb6f6"
-            }
-          },
-          "metadata": {}
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import numpy as np\n",
-        "from tqdm import tqdm # To see progess of training\n",
-        "from scipy.special import logsumexp\n",
-        "# from keras.datasets.mnist import load_data"
-      ],
-      "metadata": {
-        "id": "AptFVdu597F0"
-      },
-      "id": "AptFVdu597F0",
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "ABLjiVV87p96"
-      },
-      "id": "ABLjiVV87p96",
-      "execution_count": null,
-      "outputs": []
-    }
-  ],
-  "metadata": {
-    "kernelspec": {
-      "display_name": "Python 3",
-      "language": "python",
-      "name": "python3"
-    },
-    "language_info": {
-      "name": "python",
-      "version": "3.9.6"
-    },
-    "colab": {
-      "provenance": []
-    }
+    "tags": []
+   },
+   "source": [
+    "# Neural Network with Basic Lib"
+   ]
   },
-  "nbformat": 4,
-  "nbformat_minor": 5
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "a1cf3082",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-06T10:36:34.369265Z",
+     "iopub.status.busy": "2026-01-06T10:36:34.368922Z",
+     "iopub.status.idle": "2026-01-06T10:36:36.256454Z",
+     "shell.execute_reply": "2026-01-06T10:36:36.255605Z"
+    },
+    "id": "AptFVdu597F0",
+    "papermill": {
+     "duration": 1.894375,
+     "end_time": "2026-01-06T10:36:36.258911",
+     "exception": false,
+     "start_time": "2026-01-06T10:36:34.364536",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "from tqdm import tqdm # To see progess of training\n",
+    "from scipy.special import logsumexp\n",
+    "# from keras.datasets.mnist import load_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "67af580c",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-06T10:36:36.266397Z",
+     "iopub.status.busy": "2026-01-06T10:36:36.265892Z",
+     "iopub.status.idle": "2026-01-06T10:36:39.082336Z",
+     "shell.execute_reply": "2026-01-06T10:36:39.081299Z"
+    },
+    "papermill": {
+     "duration": 2.822794,
+     "end_time": "2026-01-06T10:36:39.084623",
+     "exception": false,
+     "start_time": "2026-01-06T10:36:36.261829",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('/kaggle/input/digit-recognizer/train.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a75452e9",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-06T10:36:39.091994Z",
+     "iopub.status.busy": "2026-01-06T10:36:39.091655Z",
+     "iopub.status.idle": "2026-01-06T10:36:39.780518Z",
+     "shell.execute_reply": "2026-01-06T10:36:39.779565Z"
+    },
+    "papermill": {
+     "duration": 0.695099,
+     "end_time": "2026-01-06T10:36:39.782585",
+     "exception": false,
+     "start_time": "2026-01-06T10:36:39.087486",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Convert data into np.array and shuffle\n",
+    "data = np.array(data)\n",
+    "m, n = data.shape\n",
+    "np.random.shuffle(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "161974ea",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-06T10:36:39.790392Z",
+     "iopub.status.busy": "2026-01-06T10:36:39.790015Z",
+     "iopub.status.idle": "2026-01-06T10:36:39.795078Z",
+     "shell.execute_reply": "2026-01-06T10:36:39.794190Z"
+    },
+    "papermill": {
+     "duration": 0.011259,
+     "end_time": "2026-01-06T10:36:39.796942",
+     "exception": false,
+     "start_time": "2026-01-06T10:36:39.785683",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Split Data\n",
+    "data_test = data[0:1000].T\n",
+    "Y_test = data_test[0]\n",
+    "X_test = data_test[1: n]\n",
+    "\n",
+    "data_train = data[1000:m].T\n",
+    "Y_train = data_train[0]\n",
+    "X_train = data_train[1: n]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "d22bb602",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-06T10:36:39.804409Z",
+     "iopub.status.busy": "2026-01-06T10:36:39.803701Z",
+     "iopub.status.idle": "2026-01-06T10:36:39.809764Z",
+     "shell.execute_reply": "2026-01-06T10:36:39.808658Z"
+    },
+    "papermill": {
+     "duration": 0.011746,
+     "end_time": "2026-01-06T10:36:39.811469",
+     "exception": false,
+     "start_time": "2026-01-06T10:36:39.799723",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def init_params():\n",
+    "    W1 = (2 * np.random.rand(10, 784) - 1) / np.sqrt(6/(10+784))\n",
+    "    B1 = (2 * np.random.rand(10) - 1) / np.sqrt(6/(10+784))\n",
+    "    W2 = (2 * np.random.rand(10, 784) - 1) / np.sqrt(6/(10+784))\n",
+    "    B2 = (2 * np.random.rand(10) - 1) / np.sqrt(6/(10+784))\n",
+    "    return W1, B1, W2, B2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1cf22591",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-06T10:36:39.818899Z",
+     "iopub.status.busy": "2026-01-06T10:36:39.818538Z",
+     "iopub.status.idle": "2026-01-06T10:36:39.823080Z",
+     "shell.execute_reply": "2026-01-06T10:36:39.822175Z"
+    },
+    "papermill": {
+     "duration": 0.010463,
+     "end_time": "2026-01-06T10:36:39.824970",
+     "exception": false,
+     "start_time": "2026-01-06T10:36:39.814507",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def ReLU(Z):\n",
+    "    return np.maximum(0, Z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "380057d1",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-06T10:36:39.832775Z",
+     "iopub.status.busy": "2026-01-06T10:36:39.831844Z",
+     "iopub.status.idle": "2026-01-06T10:36:39.836480Z",
+     "shell.execute_reply": "2026-01-06T10:36:39.835636Z"
+    },
+    "papermill": {
+     "duration": 0.010484,
+     "end_time": "2026-01-06T10:36:39.838300",
+     "exception": false,
+     "start_time": "2026-01-06T10:36:39.827816",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def Softmax(Z):\n",
+    "    return np.exp(Z) / np.sum(np.exp(Z))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f4103080",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-06T10:36:39.845465Z",
+     "iopub.status.busy": "2026-01-06T10:36:39.845095Z",
+     "iopub.status.idle": "2026-01-06T10:36:39.850292Z",
+     "shell.execute_reply": "2026-01-06T10:36:39.849136Z"
+    },
+    "papermill": {
+     "duration": 0.011172,
+     "end_time": "2026-01-06T10:36:39.852224",
+     "exception": false,
+     "start_time": "2026-01-06T10:36:39.841052",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def forward(W1, B1, W2, B2, X):\n",
+    "    Z1 = W1 @ X + B1\n",
+    "    A1 = ReLU(Z1)\n",
+    "    Z2 = W2 @ A1 + B2\n",
+    "    A2 = Softmax(A1)\n",
+    "    return Z1, A1, Z2, A2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "d7d93c3c",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-06T10:36:39.859291Z",
+     "iopub.status.busy": "2026-01-06T10:36:39.858953Z",
+     "iopub.status.idle": "2026-01-06T10:36:39.862856Z",
+     "shell.execute_reply": "2026-01-06T10:36:39.862033Z"
+    },
+    "papermill": {
+     "duration": 0.009429,
+     "end_time": "2026-01-06T10:36:39.864496",
+     "exception": false,
+     "start_time": "2026-01-06T10:36:39.855067",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Y = Y_test.copy()\n",
+    "# test_t = np.zeros((Y.size, Y.max() + 1))\n",
+    "# test_t[np.arange(Y.size), Y] = 1\n",
+    "# test_t"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7bcfd399",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-06T10:36:39.872066Z",
+     "iopub.status.busy": "2026-01-06T10:36:39.871440Z",
+     "iopub.status.idle": "2026-01-06T10:36:39.875467Z",
+     "shell.execute_reply": "2026-01-06T10:36:39.874508Z"
+    },
+    "papermill": {
+     "duration": 0.010242,
+     "end_time": "2026-01-06T10:36:39.877693",
+     "exception": false,
+     "start_time": "2026-01-06T10:36:39.867451",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# np.zeros((Y.size, Y.max() + 1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "28af3ad3",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-06T10:36:39.885027Z",
+     "iopub.status.busy": "2026-01-06T10:36:39.884688Z",
+     "iopub.status.idle": "2026-01-06T10:36:39.889626Z",
+     "shell.execute_reply": "2026-01-06T10:36:39.888641Z"
+    },
+    "papermill": {
+     "duration": 0.010918,
+     "end_time": "2026-01-06T10:36:39.891472",
+     "exception": false,
+     "start_time": "2026-01-06T10:36:39.880554",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# np.arange(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "584a6c7a",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-06T10:36:39.899094Z",
+     "iopub.status.busy": "2026-01-06T10:36:39.898401Z",
+     "iopub.status.idle": "2026-01-06T10:36:39.903440Z",
+     "shell.execute_reply": "2026-01-06T10:36:39.902499Z"
+    },
+    "papermill": {
+     "duration": 0.011091,
+     "end_time": "2026-01-06T10:36:39.905481",
+     "exception": false,
+     "start_time": "2026-01-06T10:36:39.894390",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def one_hot(Y):\n",
+    "    one_hot_Y = np.zeros((Y.size, Y.max() + 1))\n",
+    "    one_hot_Y[np.arrange(Y.size), Y] = 1\n",
+    "    return one_hot_Y.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "95e54770",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-06T10:36:39.913611Z",
+     "iopub.status.busy": "2026-01-06T10:36:39.912577Z",
+     "iopub.status.idle": "2026-01-06T10:36:39.917138Z",
+     "shell.execute_reply": "2026-01-06T10:36:39.916224Z"
+    },
+    "papermill": {
+     "duration": 0.010533,
+     "end_time": "2026-01-06T10:36:39.919017",
+     "exception": false,
+     "start_time": "2026-01-06T10:36:39.908484",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def deriv_ReLU(Z):\n",
+    "    return Z > 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "d35d5251",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-06T10:36:39.927308Z",
+     "iopub.status.busy": "2026-01-06T10:36:39.926922Z",
+     "iopub.status.idle": "2026-01-06T10:36:39.932802Z",
+     "shell.execute_reply": "2026-01-06T10:36:39.932003Z"
+    },
+    "papermill": {
+     "duration": 0.012837,
+     "end_time": "2026-01-06T10:36:39.934644",
+     "exception": false,
+     "start_time": "2026-01-06T10:36:39.921807",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def backward(Z1, A1, Z2, A2, W2, X, Y):\n",
+    "    m = Y.size\n",
+    "    one_hot_Y = one_hot(Y)\n",
+    "    dZ2 = A2 - one_hot_Y\n",
+    "    dW2 = 1 / m * DZ2 @ (A1.T)\n",
+    "    dB2 = 1 / m * np.sum(dZ2, 2)\n",
+    "    dZ1 = W2.T @ dZ2 * deriv_ReLU(Z1)\n",
+    "    dW1 = 1 / m * DZ1 @ (X.T)\n",
+    "    dB1 = 1 / m * np.sum(dZ1, 2)\n",
+    "    return dW1, dB1, dW2, dB2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "b2a236a7",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2026-01-06T10:36:39.942225Z",
+     "iopub.status.busy": "2026-01-06T10:36:39.941559Z",
+     "iopub.status.idle": "2026-01-06T10:36:39.946594Z",
+     "shell.execute_reply": "2026-01-06T10:36:39.945775Z"
+    },
+    "papermill": {
+     "duration": 0.010861,
+     "end_time": "2026-01-06T10:36:39.948387",
+     "exception": false,
+     "start_time": "2026-01-06T10:36:39.937526",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "def update_params(W1, B1, W2, B2, dW1, dB1, dW2, dB2, alpha):\n",
+    "    W1 = W1 - alpha * dW1\n",
+    "    B1 = B1 - alpha * dB1\n",
+    "    W2 = W2 - alpha * dW2\n",
+    "    B1 = B1 - alpha * dB1\n",
+    "    return W1, B1, W2, B2"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "provenance": []
+  },
+  "kaggle": {
+   "accelerator": "none",
+   "dataSources": [
+    {
+     "databundleVersionId": 861823,
+     "isSourceIdPinned": false,
+     "sourceId": 3004,
+     "sourceType": "competition"
+    }
+   ],
+   "dockerImageVersionId": 31234,
+   "isGpuEnabled": false,
+   "isInternetEnabled": false,
+   "language": "python",
+   "sourceType": "notebook"
+  },
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.12"
+  },
+  "papermill": {
+   "default_parameters": {},
+   "duration": 9.497606,
+   "end_time": "2026-01-06T10:36:40.470703",
+   "environment_variables": {},
+   "exception": null,
+   "input_path": "__notebook__.ipynb",
+   "output_path": "__notebook__.ipynb",
+   "parameters": {},
+   "start_time": "2026-01-06T10:36:30.973097",
+   "version": "2.6.0"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
 }
