--- a/a0_part_3_50668604.ipynb
+++ b/a0_part_3_50668604.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMQMWZJjMYOsfXc6FwsrVKF",
+      "authorship_tag": "ABX9TyNihxkqAn6OFSaGVbxGIwha",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -113,6 +113,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "this 4 type choroidal neovascularization, diabetic macular edema, drusen, and normal"
+      ],
+      "metadata": {
+        "id": "IbODCn221PGs"
+      }
     },
     {
       "cell_type": "code",
@@ -1390,13 +1399,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": 45,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "FsF0hcZIfE7C",
-        "outputId": "6e9ce382-601d-4a2d-c6f6-9af1f1023673"
+        "outputId": "6d20d68d-a6c6-4b92-d6ed-31fb5e9072b7"
       },
       "outputs": [
         {
@@ -1521,7 +1530,7 @@
         ")\n",
         "\n",
         "if __name__ == \"__main__\":\n",
-        "    demo.launch()\n",
+        "    demo.launch(share=True)\n",
         "'''\n",
         "with open(os.path.join(deploy_dir, \"app.py\"), \"w\") as f:\n",
         "    f.write(app_code)\n",
@@ -1556,9 +1565,100 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "# take one test image\n",
+        "img, label = test_ds[0]\n",
+        "\n",
+        "# convert tensor to numpy\n",
+        "img_np = img.squeeze(0).numpy()\n",
+        "\n",
+        "# save as png\n",
+        "import matplotlib.pyplot as plt\n",
+        "plt.imsave(\"sample_oct.png\", img_np, cmap=\"gray\")\n",
+        "\n",
+        "print(\"Saved sample_oct.png\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ydQ4JJ7BzzJh",
+        "outputId": "054514bf-7108-4ad4-c342-8cee1c6a7be3"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saved sample_oct.png\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip -q install gradio Pillow"
+      ],
+      "metadata": {
+        "id": "r44dyca20h-s"
+      },
+      "execution_count": 54,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python a0_part_3_deployment_50668604/app.py"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cliZuQr6qkYj",
+        "outputId": "b44f1d9e-194e-4212-f5c1-6745dca49b6d"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "* Running on local URL:  http://127.0.0.1:7860\n",
+            "* Running on public URL: https://a458fcdf09d02405ca.gradio.live\n",
+            "\n",
+            "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n",
+            "Keyboard interruption in main thread... closing server.\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/gradio/blocks.py\", line 3043, in block_thread\n",
+            "    time.sleep(0.1)\n",
+            "KeyboardInterrupt\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/content/a0_part_3_deployment_50668604/app.py\", line 74, in <module>\n",
+            "    demo.launch(share=True)\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/gradio/blocks.py\", line 2950, in launch\n",
+            "    self.block_thread()\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/gradio/blocks.py\", line 3047, in block_thread\n",
+            "    self.server.close()\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/gradio/http_server.py\", line 64, in close\n",
+            "    def close(self):\n",
+            "\n",
+            "KeyboardInterrupt\n",
+            "Killing tunnel 127.0.0.1:7860 <> https://a458fcdf09d02405ca.gradio.live\n",
+            "^C\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "cliZuQr6qkYj"
+        "id": "oI-c67DezP7c"
       },
       "execution_count": null,
       "outputs": []
