--- a/a0_part_3_50668604.ipynb
+++ b/a0_part_3_50668604.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNihxkqAn6OFSaGVbxGIwha",
+      "authorship_tag": "ABX9TyPp1jBJ9Gxgw1g7fNVLCtY0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -36,7 +36,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "EWwzs-NQgVLC",
         "outputId": "2d859b12-e6c7-4813-9edf-9ae8f789b9bb"
@@ -98,7 +99,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "rpjHUmfPfx70",
         "outputId": "bf251a3d-c7ba-42c4-800a-3722563fcd82"
@@ -144,7 +146,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "W3qYn8OQgs0k",
         "outputId": "b30ecdb2-78bf-460c-fe92-be876837253a"
@@ -251,7 +254,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "actg-BCjhuNr",
         "outputId": "6f02b86c-0b66-4cd9-f246-5b15f4e0ba21"
@@ -442,7 +446,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "IFiZ0kmYiu2X",
         "outputId": "c0cf243a-245d-4427-a99f-f8295fd4ae80"
@@ -635,7 +640,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "a_1BOR7Hj0n-",
         "outputId": "549e7447-d705-48c7-e96e-35562dc2de10"
@@ -667,7 +673,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "X6Oymuvzj9ms",
         "outputId": "06a499f7-d642-409e-ea40-fc7db9fd4cdc"
@@ -690,7 +697,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "4nK3iObplfZi",
         "outputId": "07ce1598-ea4b-4d40-8f60-2fdce5d367f5"
@@ -984,7 +992,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "S3rNMrvFmw9i",
         "outputId": "b1c1a2fe-b028-4f95-cd98-1a4d944002aa"
@@ -1200,12 +1209,13 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "-NBQWysxnxNg",
-        "outputId": "be9605f9-87ea-40ec-831d-87092fa433bc"
+        "outputId": "184246b1-cfa1-4613-d8a5-f37081e3bd8f"
       },
-      "execution_count": 38,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "stream",
@@ -1265,9 +1275,9 @@
           "height": 497
         },
         "id": "dWaVht49n0Bs",
-        "outputId": "2929d682-168a-4479-f38f-cdc0b114423f"
+        "outputId": "7c7b6651-ee9d-49c7-a081-b33debffc1be"
       },
-      "execution_count": 39,
+      "execution_count": 57,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1342,9 +1352,9 @@
           "height": 633
         },
         "id": "356ik27in33S",
-        "outputId": "bb7d48a8-6094-4421-b250-f23e72147526"
+        "outputId": "3e21b27b-ea8e-4344-e980-2c43e4adbafd"
       },
-      "execution_count": 40,
+      "execution_count": 58,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1402,7 +1412,8 @@
       "execution_count": 45,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "FsF0hcZIfE7C",
         "outputId": "6d20d68d-a6c6-4b92-d6ed-31fb5e9072b7"
@@ -1542,20 +1553,19 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In this assignment, I trained a CNN model on the OCTMNIST dataset. First, I implemented a base CNN model and achieved around 71% test accuracy. The training and validation accuracy increased steadily, which shows that the model is learning meaningful features from the images. There was no strong overfitting observed since training and validation curves were close.\n",
+        "In this assignment I trained a CNN model on the OCTMNIST dataset. First I implemented base CNN model and achieved 71% test accuracy. The training and validation accuracy increased steadily that shows that the model is learning meaningful features from the images. There was no strong overfitting observed since training and validation curves were close.\n",
         "\n",
-        "After that, I improved the model by adding Batch Normalization layers, class weighted loss, learning rate scheduler, and increased fully connected layer size. These improvements helped the model to generalize better and gave higher validation and test performance compared to the base model.\n",
+        "After that I improved the model by adding Batch Normalization layers class weighted loss learning rate scheduler and increased fully connected layer size. These improvements helped the model to generalize better and gave higher validation and test performance compared to the base model.\n",
         "\n",
         "From the loss curves, both training and validation loss decreased over epochs, showing stable learning behavior. The test loss was higher, which indicates some generalization gap, but this is expected since test data is completely unseen.\n",
         "\n",
-        "The confusion matrix and ROC curves show that the model performs well for most classes. Classes such as choroidal neovascularization and normal were classified with higher confidence, while diabetic macular edema and drusen were slightly harder. The improved model shows better AUC values for all classes, especially helping the difficult class.\n",
+        "The confusion matrix and ROC curves show that the model performs well for most classes. Classes such as choroidal neovascularization and normal were classified with higher confidence while diabetic macular edema and drusen were slightly harder. The improved model shows better AUC values for all classes, especially helping the difficult class.\n",
         "\n",
-        "For interpretability, feature maps from early, mid, and late convolution layers were visualized. Early layers capture basic edges and textures, while deeper layers learn more complex patterns. ReLU activation maps also show how important regions of the image are highlighted. The first convolution kernels show edge-like filters learned by the network.\n",
+        "For interpretability feature maps from early, mid, and late convolution layers were visualized. Early layers capture basic edges and textures, while deeper layers learn more complex patterns. ReLU activation maps also show how important regions of the image are highlighted. The first convolution kernels show edge-like filters learned by the network.\n",
         "\n",
         "Finally, I deployed the improved model using Gradio. A simple web interface was created where users can upload OCT images and get predicted class probabilities.\n",
         "\n",
-        "Deployment Video Link:\n",
-        "\n",
+        "Deployment Video Link: https://b737262209b5afce58.gradio.live\n",
         "\n",
         "Overall, this assignment helped me understand CNN training, evaluation metrics, model improvement techniques, interpretability, and basic deployment workflow.\n"
       ],
@@ -1580,7 +1590,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "ydQ4JJ7BzzJh",
         "outputId": "054514bf-7108-4ad4-c342-8cee1c6a7be3"
@@ -1614,19 +1625,20 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "cliZuQr6qkYj",
-        "outputId": "b44f1d9e-194e-4212-f5c1-6745dca49b6d"
+        "outputId": "7a751ed6-5644-40ed-fc5f-6fc39bb9cced"
       },
-      "execution_count": 55,
+      "execution_count": 59,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "* Running on local URL:  http://127.0.0.1:7860\n",
-            "* Running on public URL: https://a458fcdf09d02405ca.gradio.live\n",
+            "* Running on public URL: https://b737262209b5afce58.gradio.live\n",
             "\n",
             "This share link expires in 1 week. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n",
             "Keyboard interruption in main thread... closing server.\n",
@@ -1642,13 +1654,10 @@
             "    demo.launch(share=True)\n",
             "  File \"/usr/local/lib/python3.12/dist-packages/gradio/blocks.py\", line 2950, in launch\n",
             "    self.block_thread()\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/gradio/blocks.py\", line 3047, in block_thread\n",
-            "    self.server.close()\n",
-            "  File \"/usr/local/lib/python3.12/dist-packages/gradio/http_server.py\", line 64, in close\n",
-            "    def close(self):\n",
-            "\n",
+            "  File \"/usr/local/lib/python3.12/dist-packages/gradio/blocks.py\", line 3045, in block_thread\n",
+            "    print(\"Keyboard interruption in main thread... closing server.\")\n",
             "KeyboardInterrupt\n",
-            "Killing tunnel 127.0.0.1:7860 <> https://a458fcdf09d02405ca.gradio.live\n",
+            "Killing tunnel 127.0.0.1:7860 <> https://b737262209b5afce58.gradio.live\n",
             "^C\n"
           ]
         }
